# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bframelib"
version = "0.1.4"
description = "An open source billing framework to generate, view and diff invoices locally."
readme = "README.md"
authors = [{ name = "Allan Blair", email = "allan@bframe.work" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["billing", "invoice", "invoicing", "bframe"]
dependencies = [
    "Jinja2>=3.0.0",
    "duckdb>=1.0.0",
    "sqlparse>=0.5.2",
    "numpy>=1.20.0",
    "pandas>=2.0.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black",
    "bumpver",
    "isort",
    "pip-tools",
    "pytest",
    "twine",
    "build",
]

[project.urls]
Homepage = "https://bframe.work"
Source = "https://github.com/bframe-work/bframelib"

[tool.bumpver]
current_version = "0.1.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

